syntax = "proto3";

package uniedit.media.v1;

option go_package = "github.com/uniedit/server/api/pb/media;mediav1";

import "common/common.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  host: "localhost:8080"
  base_path: "/api/v1"
  schemes: [HTTP]
  info: {
    title: "UniEdit API"
    version: "v1"
    description: "UniEdit 后端 API（由 proto 自动生成 OpenAPI）"
  }
};

service MediaService {
  rpc GenerateImage(GenerateImageRequest) returns (GenerateImageResponse) {
    option (google.api.http) = {post: "/media/images/generations" body: "*"};
  }

  rpc GenerateVideo(GenerateVideoRequest) returns (VideoGenerationStatus) {
    option (google.api.http) = {post: "/media/videos/generations" body: "*"};
  }

  rpc GetVideoStatus(GetByTaskIDRequest) returns (VideoGenerationStatus) {
    option (google.api.http) = {get: "/media/videos/generations/{task_id}"};
  }

  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {
    option (google.api.http) = {get: "/media/tasks"};
  }

  rpc GetTask(GetByTaskIDRequest) returns (MediaTask) {
    option (google.api.http) = {get: "/media/tasks/{task_id}"};
  }

  rpc CancelTask(GetByTaskIDRequest) returns (uniedit.common.v1.Empty) {
    option (google.api.http) = {delete: "/media/tasks/{task_id}"};
  }
}

service MediaAdminService {
  rpc ListProviders(uniedit.common.v1.Empty) returns (ListProvidersResponse) {
    option (google.api.http) = {get: "/media/providers"};
  }

  rpc GetProvider(GetByIDRequest) returns (MediaProvider) {
    option (google.api.http) = {get: "/media/providers/{id}"};
  }

  rpc ListModels(ListModelsRequest) returns (ListModelsResponse) {
    option (google.api.http) = {get: "/media/models"};
  }
}

message GetByIDRequest { string id = 1; }

message GetByTaskIDRequest { string task_id = 1; }

message GenerateImageRequest {
  string prompt = 1;
  string negative_prompt = 2;
  int32 n = 3;
  string size = 4;
  string quality = 5;
  string style = 6;
  string model = 7;
  string response_format = 8;
}

message GeneratedImage {
  string url = 1;
  string b64_json = 2;
  string revised_prompt = 3;
}

message ImageUsage {
  int32 total_images = 1;
  double cost_usd = 2;
}

message GenerateImageResponse {
  repeated GeneratedImage images = 1;
  string model = 2;
  ImageUsage usage = 3;
  int64 created_at = 4;
  string task_id = 5;
}

message GenerateVideoRequest {
  string prompt = 1;
  string input_image = 2;
  string input_video = 3;
  int32 duration = 4;
  string aspect_ratio = 5;
  string resolution = 6;
  int32 fps = 7;
  string model = 8;
}

message GeneratedVideo {
  string url = 1;
  int32 duration = 2;
  int32 width = 3;
  int32 height = 4;
  int32 fps = 5;
  int64 file_size = 6;
  string format = 7;
}

message VideoGenerationStatus {
  string task_id = 1;
  string status = 2;
  int32 progress = 3;
  GeneratedVideo video = 4;
  string error = 5;
  int64 created_at = 6;
}

message MediaTask {
  string id = 1;
  string owner_id = 2;
  string type = 3;
  string status = 4;
  int32 progress = 5;
  string error = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message ListTasksRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListTasksResponse { repeated MediaTask tasks = 1; }

message MediaProvider {
  string id = 1;
  string name = 2;
  string type = 3;
  string base_url = 4;
  bool enabled = 5;
  string created_at = 6;
  string updated_at = 7;
}

message ListProvidersResponse { repeated MediaProvider providers = 1; }

message MediaModel {
  string id = 1;
  string provider_id = 2;
  string name = 3;
  repeated string capabilities = 4;
  bool enabled = 5;
  string created_at = 6;
  string updated_at = 7;
}

message ListModelsRequest { string capability = 1; }

message ListModelsResponse { repeated MediaModel models = 1; }

